all stage and level is finish, wait to finish the zuizhongxingtai

--- a/Raise_Chicken/pic.qrc
+++ b/Raise_Chicken/pic.qrc
@@ -17,5 +17,8 @@
         <file>pic/shayuguowang.jpg</file>
         <file>pic/kunkun_renxing.jpg</file>
         <file>pic/kunkun_xizao.gif</file>
+        <file>pic/niganma.jpg</file>
+        <file>pic/dd_kunkun.png</file>
+        <file>pic/kunkun_pwf.gif</file>
     </qresource>
 </RCC>
