--- a/Raise_Chicken/widget.ui
+++ b/Raise_Chicken/widget.ui
@@ -153,9 +153,9 @@ QPushButton:pressed {
    <property name="geometry">
     <rect>
      <x>980</x>
-     <y>190</y>
+     <y>180</y>
      <width>71</width>
-     <height>21</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="font">
@@ -171,9 +171,9 @@ QPushButton:pressed {
    <property name="geometry">
     <rect>
      <x>1060</x>
-     <y>190</y>
+     <y>180</y>
      <width>21</width>
-     <height>21</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="font">
@@ -318,9 +318,9 @@ color: rgb(239, 41, 41);
    <property name="geometry">
     <rect>
      <x>1060</x>
-     <y>144</y>
+     <y>134</y>
      <width>151</width>
-     <height>31</height>
+     <height>41</height>
     </rect>
    </property>
    <property name="font">
@@ -336,9 +336,9 @@ color: rgb(239, 41, 41);
    <property name="geometry">
     <rect>
      <x>980</x>
-     <y>150</y>
+     <y>140</y>
      <width>61</width>
-     <height>21</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="font">
@@ -495,7 +495,7 @@ QPushButton:pressed {
    </property>
    <property name="font">
     <font>
-     <pointsize>20</pointsize>
+     <pointsize>18</pointsize>
     </font>
    </property>
    <property name="styleSheet">
@@ -513,7 +513,8 @@ QPushButton:pressed {
 }</string>
    </property>
    <property name="text">
-    <string>玩耍</string>
+    <string>和朋友
+玩耍</string>
    </property>
   </widget>
  </widget>
