--- a/Raise_Chicken/pic.qrc
+++ b/Raise_Chicken/pic.qrc
@@ -20,5 +20,9 @@
         <file>pic/niganma.jpg</file>
         <file>pic/dd_kunkun.png</file>
         <file>pic/kunkun_pwf.gif</file>
+        <file>pic/yiniantongkun.gif</file>
+        <file>pic/300w1.gif</file>
+        <file>pic/xukun.gif</file>
+        <file>pic/300w.gif</file>
     </qresource>
 </RCC>
